Finished Graph implementation and black box tests.